[package]
name = "dnsseeder"
version = "0.1.1"
edition = "2024"

[dependencies]
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
fern = "0.7"
hickory-proto = "0.24"
configparser = "1.0"
http-body-util = "0.1"
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
kaspa-p2p-lib = "0.15"
kaspa-utils-tower = "0.15"
hex = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
protobuf = "2.28"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.37", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
log = "0.4"
tokio-stream = "0.1"
uuid = { version = "1.10", features = ["v4"] }

[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.13", features = ["protobuf-codec"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
